Fix unit tests.